style.css
/* ... */
@media screen and (min-width: 880px) {
	#header-navigation {
		position: fixed;
		z-index: 99999;
	}
}
@media screen and (max-width: 880px) {
	#main h2, #main h3, #main h4 {
		margin: 0 30px;
	}
	.sponsor-level-title:after, .sponsor-level-title:before {
		width: 0;
	}
	#blog_subscription-2 {
		transform: none;
	}
	#footer-widget-3 {
		padding-left: 30px;
		padding-right: 30px;
	}
	.page-navigation-container li:hover, .page-navigation-container li.focus {
		background-color: transparent;
	}
	#subscribe-submit input {
		width: 50%;
		left: 42%;
	}
	.page-navigation-container ul.sub-menu {
		padding-left: 0;
		z-index: 9999;
	}
	.page-navigation-container li ul li a {
		text-align: -webkit-center;
	}
	.wcb_widget_sponsors .sponsor-logo img {
		padding: 0 16px 0 16px !important
	}
	h1.entry-title {
		font-size: 4rem;
	}
}
@media screen and ( max-width: 375px ) {
	#header-widget-1 {
		flex-wrap: wrap;
		height: auto !important;
	}

	#header-widget-1 section {
		width: 100%;
	}
}

